# intervalsets

./: .commitlintrc.yaml  .editorconfig  .gitignore  AGENTS.md  BEHAVIOR.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIB.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  _typos.toml  deny.toml  justfile  lefthook.yml  release.toml  rustfmt.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  book.yml  changelog.yml  codecov.yml  deny.yml  dependabot-label.yml  pr-title.yml  rust.yml
.husky/hooks/: commit-msg  pre-commit
benches/: intervalsets.rs
benchmarks/: Cargo.toml
benchmarks/benches/: intervalsets.rs  intervalsets_core.rs
benchmarks/src/: lib.rs
book/: Cargo.toml  README.md  book.toml
book/content/: SUMMARY.md  introduction.md
book/src/: SUMMARY.md  introduction.md  lib.rs
core-panic-canary/: Cargo.toml  README.md  STATUS.md
core-panic-canary/src/: lib.rs
core-panic-canary/src/proofs/: mod.rs  tier1.rs  tier2_complement.rs  tier2_difference.rs  tier2_elem_iter.rs  tier2_finite.rs  tier2_intersection.rs  tier2_merged.rs  tier2_union.rs  tier3_add.rs  tier3_div.rs  tier3_hull.rs  tier3_mul.rs  tier3_rebound.rs  tier3_split.rs  tier3_sub.rs
core-panic-canary/src/proofs/set_types/: mod.rs  tier1.rs  tier2_difference.rs  tier2_elem_iter.rs  tier2_finite.rs  tier2_measure.rs  tier2_union.rs  tier3_add.rs  tier3_div.rs  tier3_mul.rs  tier3_rebound.rs  tier3_sub.rs
core-panic-canary/src/proofs/storage_types/: mod.rs  tier3_add.rs  tier3_div.rs  tier3_mul.rs  tier3_sub.rs
docs/: concepts.md
docs/design/: measure-api.md  storage-type-cast.md
docs/snippets/: AGENTS.md  CLAUDE.md  modeling.md  text-repr-grammar.md
docs/specs/: string_repr.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
intervalsets/: CHANGELOG.md  Cargo.toml
intervalsets-core/: CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE-APACHE
intervalsets-core/examples/: measure.rs  panic_free_tier1.rs  panic_free_tier2.rs  panic_free_tier3_add.rs  panic_free_tier3_div.rs  panic_free_tier3_hull_enums.rs  panic_free_tier3_mul.rs  panic_free_tier3_mul_b.rs  panic_free_tier3_split.rs  panic_free_tier3_sub.rs  user-kani-template.rs
intervalsets-core/src/: bound.rs  category.rs  default.rs  disjoint.rs  display.rs  empty.rs  error.rs  factory.rs  from.rs  lib.rs  numeric.rs  parse.rs  sets.rs  traits.rs  try_cmp.rs
intervalsets-core/src/cast/: element.rs  mod.rs  sets.rs
intervalsets-core/src/feat/: approx.rs  arbitrary.rs  bigdecimal.rs  bigint.rs  decimal.rs  fixed.rs  mod.rs  ordfloat.rs  quickcheck.rs  rkyv.rs  serde.rs
intervalsets-core/src/from/: mod.rs  ord.rs  range.rs  try_from.rs
intervalsets-core/src/measure/: cardinality.rs  count.rs  extent.rs  measure.rs  midpoint.rs  mod.rs  width.rs
intervalsets-core/src/numeric/: element.rs  midpoint.rs  mod.rs  saturating.rs
intervalsets-core/src/ops/: adjacent.rs  bisect.rs  complement.rs  connects.rs  contains.rs  difference.rs  elem_iter.rs  finite.rs  hull.rs  intersection.rs  intersects.rs  merged.rs  midpoint.rs  mod.rs  rebound.rs  span.rs  split.rs  union.rs  util.rs
intervalsets-core/src/ops/math/: add.rs  div.rs  macros.rs  mod.rs  mul.rs  sub.rs
intervalsets-core/src/sets/: disjoint.rs  enum_interval.rs  finite.rs  half.rs  mod.rs
intervalsets-core/tests/: macro_enum_interval.rs
intervalsets-macros/: Cargo.toml  README.md
intervalsets-macros/src/: cross.rs  expand.rs  lib.rs  set.rs  shape.rs
intervalsets-macros/tests/: ui.rs
intervalsets-macros/tests/ui/: bad_bound_expr.rs  bad_bound_expr.stderr  bad_type_arg.rs  bad_type_arg.stderr  closed_on_unbounded.rs  closed_on_unbounded.stderr  crossed_bounds_float.rs  crossed_bounds_float.stderr  crossed_bounds_int.rs  crossed_bounds_int.stderr  missing_brackets.rs  missing_brackets.stderr  missing_comma.rs  missing_comma.stderr  not_string_literal.rs  not_string_literal.stderr  set_bad_piece.rs  set_bad_piece.stderr  set_empty_segment.rs  set_empty_segment.stderr  set_missing_braces.rs  set_missing_braces.stderr  set_notation.rs  set_notation.stderr  three_args.rs  three_args.stderr  trailing_comma.rs  trailing_comma.stderr
intervalsets/src/: bound.rs  cast.rs  display.rs  error.rs  factory.rs  from.rs  hash.rs  lib.rs  numeric.rs  parse.rs  sets.rs  util.rs
intervalsets/src/detail/: adjacent.rs  bounding.rs  complement.rs  empty.rs  from.rs  hash.rs  intersection.rs  intersects.rs  measure.rs  merged.rs  mod.rs  partial_ord.rs  test.rs  union.rs
intervalsets/src/feat/: approx.rs  arbitrary.rs  decimal.rs  float.rs  mod.rs  quickcheck.rs  uom.rs
intervalsets/src/measure/: cardinality.rs  count.rs  measure.rs  midpoint.rs  mod.rs  width.rs
intervalsets/src/ops/: adjacent.rs  bisect.rs  complement.rs  connects.rs  contains.rs  difference.rs  elem_iter.rs  finite.rs  hull.rs  intersection.rs  intersects.rs  merged.rs  midpoint.rs  mod.rs  rebound.rs  split.rs  union.rs
intervalsets/src/ops/math/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
intervalsets/src/traits/: complement.rs  contains.rs  difference.rs  empty.rs  hull.rs  intersection.rs  merged.rs  split.rs  union.rs
intervalsets/tests/: integration.rs  macro_interval.rs  macro_set.rs
src/: bound.rs  bounds.rs  complement.rs  contains.rs  contiguous.rs  decimal.rs  difference.rs  display.rs  empty.rs  factory.rs  finite.rs  from.rs  half.rs  hash.rs  infinite.rs  intersection.rs  intersects.rs  interval.rs  into.rs  ival.rs  lib.rs  merged.rs  normalize.rs  normalized.rs  numeric.rs  padded.rs  partial_ord.rs  reshape.rs  sets.rs  shifted.rs  sizable.rs  sizeable.rs  union.rs  util.rs
src/concrete/: finite.rs  half.rs  interval.rs  mod.rs  set.rs
src/detail/: adjacent.rs  bounding.rs  complement.rs  contains.rs  empty.rs  from.rs  intersection.rs  intersects.rs  measure.rs  merged.rs  mod.rs  partial_ord.rs  split.rs  test.rs  union.rs
src/feat/: bigint.rs  chrono.rs  decimal.rs  float.rs  mod.rs  (+1 more)
tests/: integration.rs  uom.rs
(+42 files in other folders)
