[workspace]
members = ["benchmarks", "book", "core-panic-canary", "intervalsets", "intervalsets-core"]
default-members = ["intervalsets", "intervalsets-core"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.3"
authors = ["Greg Echelberger"]
edition = "2021"
rust-version = "1.87.0"
homepage = "https://gechelberger.github.io/intervalsets/"
repository = "https://github.com/gechelberger/intervalsets"
license = "MIT OR Apache-2.0"