[workspace]
members = [ "benchmarks", "book","intervalsets", "intervalsets-core"]
default-members = ["intervalsets", "intervalsets-core"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.3"
authors = ["Greg Echelberger"]
edition = "2021"
rust-version = "1.87.0"
homepage = "https://gechelberger.github.io/intervalsets/"
repository = "https://github.com/gechelberger/intervalsets"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"

[workspace.dependencies]
intervalsets-core = { version = "=0.1.0-alpha.3", path = "intervalsets-core" }