[workspace]
members = [ "benchmarks", "core-panic-canary", "intervalsets", "intervalsets-core", "intervalsets-macros"]
default-members = ["intervalsets", "intervalsets-core", "intervalsets-macros"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.3"
authors = ["Greg Echelberger"]
edition = "2021"
rust-version = "1.87.0"
homepage = "https://docs.rs/intervalsets"
repository = "https://github.com/gechelberger/intervalsets"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "warn"
# `kani` is set by `cargo kani` symbolic-execution runs; the proofs
# under `core-panic-canary/src/proofs/` and the user template at
# `intervalsets-core/examples/user-kani-template.rs` gate on it.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"

[workspace.dependencies]
intervalsets-core = { version = "=0.1.0-alpha.3", path = "intervalsets-core" }
intervalsets-macros = { version = "=0.1.0-alpha.3", path = "intervalsets-macros" }