[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arbitrary = "1.4.1"
criterion = "0.5.1"
intervalsets = { path = "../intervalsets", features = ["arbitrary"]}
intervalsets-core = { path = "../intervalsets-core", features = ["arbitrary"] }
rand = "0.8.5"

[[bench]]
name = "intervalsets"
harness = false

[[bench]]
name = "intervalsets_core"
harness = false
