[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arbitrary = "1.4.1"
criterion = "0.8.2"
intervalsets = { path = "../intervalsets", features = ["arbitrary"]}
intervalsets-core = { workspace = true, features = ["arbitrary"] }
rand = "0.10.1"

[[bench]]
name = "intervalsets"
harness = false

[[bench]]
name = "intervalsets_core"
harness = false

[lints]
workspace = true
