[package]
name = "core-panic-canary"
version = "0.0.0"
edition = "2021"
publish = false

# Internal workspace member that verifies the panic-free claim
# documented in `intervalsets-core/src/ops/mod.rs` two ways.
#
# 1. Linker canaries: each `[[bin]]` in src/bin/ links against the
#    `#[no_panic::no_panic]`-annotated surface (gated by the
#    `panic-free-check` feature on `intervalsets-core`). Link succeeds
#    iff the optimizer eliminates every panic edge. Run via
#    `just panic-check`.
#
# 2. Kani proofs: `#[cfg(kani)]` modules under `src/proofs/` mirror
#    each linker canary as a symbolic-execution harness. Run via
#    `cargo kani -p core-panic-canary`. Strictly stronger than the
#    linker canary because it covers every input within harness
#    bounds rather than just the concrete fixtures the bin links.

[dependencies]
intervalsets-core = { path = "../intervalsets-core", features = ["panic-free-check"] }

[package.metadata.kani.flags]
default-unwind = "4"
