[package]
name = "core-panic-canary"
version = "0.0.0"
edition = "2021"
publish = false

# Internal workspace member that verifies the panic-free claims
# documented in `intervalsets-core/src/ops/mod.rs` via Kani symbolic
# execution. `#[cfg(kani)]` modules under `src/proofs/` enumerate every
# input within each harness's bounds and prove no panic edge is
# reachable. See README.md for the harness layout and run commands.

[dependencies]
intervalsets-core = { path = "../intervalsets-core" }
ordered-float = { version = "5.3.0", default-features = false, optional = true }

[features]
# Per-harness gating in `src/proofs/storage_types/tier3_*.rs` enables
# `OrderedFloat<f64>` and `NotNan<f64>` proofs when this feature is on.
# `just kani` and `just check-kani` pass `--all-features`, so this is
# enabled by default for canary runs.
ordered-float = ["intervalsets-core/ordered-float", "dep:ordered-float"]

[lints]
workspace = true

[package.metadata.kani.flags]
default-unwind = "4"
