[package]
name = "intervalsets-core"
version = "0.1.0-alpha.2"
authors = ["Greg Echelberger"]
edition = "2021"
rust-version = "1.81.0"
readme = "README.md"
description = """
intervalsets-core provides no-std, no-alloc compatible intervals and set operations.
"""
repository = "https://github.com/gechelberger/intervalsets"
documentation = "https://docs.rs/intervalsets-core"
license = "MIT"
keywords = [
    "no-std",
    "no-alloc",
    "intervals",
    "bounds",
    "sets"
]
categories = [
    "mathematics", 
    "science", 
    "data-structures", 
    "no-std::no-alloc"
]

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arbitrary = { version = "1.4.1", default-features = false, optional = true }
bigdecimal = { version = "0.4.6", optional = true }
itertools = { version = "0.13.0", default-features = false }
num-bigint = { version = "0.4.6", optional = true }
num-traits = { version = "0.2.19", default-features = false }
ordered-float = { version = "4.5.0", default-features = false, optional = true }
rkyv = { version = "0.8.8", default-features = false, optional = true }
rust_decimal = { version = "1.36.0", default-features = false, optional = true }
serde = { version = "1.0.215", default-features = false, features = ["derive"], optional = true }

[features]
std = []
rust_decimal = ["dep:rust_decimal"]
ordered-float = ["dep:ordered-float"]
arbitrary = ["dep:arbitrary"]
num-bigint = ["std", "dep:num-bigint"]
bigdecimal = ["std", "dep:bigdecimal"]
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]

[dev-dependencies]
rkyv = { version = "0.8.8", features = ["alloc", "bytecheck"] }
rmp-serde = "1.3.0"
serde-brief = "0.1.1"
serde_json = "1.0.132"
