[package]
name = "intervalsets-core"
description = """
intervalsets-core provides no-std/no-alloc, bounded and unbounded
intervals implemented generically with associated set operations.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/intervalsets-core"
keywords = [
    "no-std",
    "no-alloc",
    "intervals",
    "bounds",
    "sets"
]
categories = [
    "mathematics", 
    "science", 
    "data-structures", 
    "no-std::no-alloc"
]

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
approx = { version = "0.5.1", default-features = false, optional = true }
arbitrary = { version = "1.4.1", default-features = false, optional = true }
bigdecimal = { version = "0.4.6", optional = true }
fixed = { version = "1.28.0", optional = true, default-features = false, features = ["num-traits"] }
itertools = { version = "0.14.0", default-features = false }
num-bigint = { version = "0.4.6", optional = true }
num-traits = { version = "0.2.19", default-features = false }
ordered-float = { version = "5.3.0", default-features = false, optional = true }
quickcheck = { version = "1.0.3", optional = true }
quickcheck_macros = { version = "1.0.0", optional = true }
rust_decimal = { version = "1.36.0", default-features = false, optional = true }
serde = { version = "1.0.215", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0.3", default-features = false }
typenum = { version = "1.17.0", default-features = false, features = ["no_std"], optional = true }

[features]
std = []
approx = ["dep:approx"]
rust_decimal = ["dep:rust_decimal"]
ordered-float = ["dep:ordered-float"]
arbitrary = ["dep:arbitrary"]
num-bigint = ["std", "dep:num-bigint"]
bigdecimal = ["std", "dep:bigdecimal"]
serde = ["dep:serde"]
quickcheck = ["std", "dep:quickcheck", "dep:quickcheck_macros"]
fixed = ["dep:fixed", "dep:typenum"]

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rmp-serde = "1.3.0"
serde-brief = "0.2.0"
serde_json = "1.0.132"

[lints]
workspace = true
