[package]
name = "intervalsets-macros"
description = """
Compile-time-checked interval literal macros for intervalsets and
intervalsets-core. Provides `interval!` and `enum_interval!` which
parse a string literal at macro expansion time and emit a constructor
call, surfacing malformed input as a build error instead of a runtime
panic.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/intervalsets-macros"
keywords = [
    "intervals",
    "macro",
    "proc-macro",
    "interval-literal",
    "compile-time",
]
categories = [
    "mathematics",
    "data-structures",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = ["proc-macro", "parsing", "full", "printing"] }
proc-macro-crate = "3"

[dev-dependencies]
trybuild = "1"

[lints]
workspace = true
