[package]
name = "intervalsets"
version = "0.1.0-alpha.2"
authors = ["Greg Echelberger"]
edition = "2021"
rust-version = "1.81.0"
readme = "README.md"
description = """
The intervalsets crate provides bounded and unbounded intervals 
implemented as sets with all the associated set operations.
"""
repository = "https://github.com/gechelberger/intervalsets"
documentation = "https://docs.rs/intervalsets"
license = "MIT"
keywords = [
    "intervals",
    "math",
    "sets",
    "measure",
    "bounds"
]
categories = ["mathematics", "science", "data-structures"]
exclude = ["notes/", "fuzz/"]

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
intervalsets-core = { version = "0.1.0-alpha.2", path = "../intervalsets-core" }
itertools = "0.13.0"
num-traits = "0.2.19"
quickcheck = { version = "1.0.3", optional = true }

[dev-dependencies]
approx = "0.5.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
siphasher = "1.0.1"

[features]
quickcheck = ["dep:quickcheck", "intervalsets-core/quickcheck"]

