[package]
name = "intervalsets"
version = "0.1.0-alpha.2"
authors = ["Greg Echelberger"]
edition = "2021"
rust-version = "1.81.0"
readme = "README.md"
description = """
The intervalsets crate provides bounded and unbounded intervals 
implemented as sets with all the associated set operations.
"""
repository = "https://github.com/gechelberger/intervalsets"
documentation = "https://docs.rs/intervalsets"
license = "MIT"
keywords = [
    "intervals",
    "math",
    "sets",
    "measure",
    "bounds"
]
categories = ["mathematics", "science", "data-structures"]
exclude = ["notes/", "fuzz/"]

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arbitrary = { version = "1.4.1", optional = true }
intervalsets-core = { version = "0.1.0-alpha.2", path = "../intervalsets-core" }
itertools = "0.13.0"
num-traits = "0.2.19"
quickcheck = { version = "1.0.3", optional = true }
rkyv = { version = "0.8.8", optional = true }
serde = { version = "1.0.215", optional = true, features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
bigdecimal = "0.4.6"
fixed = "1.28.0"
num-bigint = "0.4.6"
ordered-float = "4.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
rust_decimal = "1.36.0"
siphasher = "1.0.1"

[features]
ordered-float = [ "intervalsets-core/ordered-float"]
rust_decimal = [ "intervalsets-core/rust_decimal"]
bigdecimal = ["intervalsets-core/bigdecimal"]
fixed = ["intervalsets-core/fixed"]
num-bigint = ["intervalsets-core/num-bigint"]
quickcheck = ["dep:quickcheck", "intervalsets-core/quickcheck"]
arbitrary = ["dep:arbitrary", "intervalsets-core/arbitrary"]
serde = ["dep:serde", "intervalsets-core/serde"]
rkyv = ["dep:rkyv", "intervalsets-core/rkyv"]
